# carbonmonoxide-sensor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  memory.x
.cargo/: config
src/: main.rs
